@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-08T01:03:32Z",
+  "timestamp" : "2022-04-09T16:19:13Z",
   "count_outdated" : 234,
   "uniques_outdated" : 117,
-  "count" : 247,
-  "uniques" : 127,
+  "count" : 248,
+  "uniques" : 128,
   "clones" : [
     {
       "timestamp": "2022-03-29T00:00:00Z",
@@ -21,6 +21,13 @@
     },
     {
       "timestamp": "2022-04-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-04-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
