@@ -1,6 +1,6 @@
 {
-  "count": 13,
-  "uniques": 9,
+  "count": 14,
+  "uniques": 10,
   "clones": [
     {
       "timestamp": "2022-03-29T00:00:00Z",
@@ -14,6 +14,11 @@
     },
     {
       "timestamp": "2022-04-07T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-09T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
